# password-manager

./: .gitignore  Cargo.toml  README.md  Rocket.toml  data.db  session.vim
migrations/2022-08-19-194125_users/: up.sql
src/: guards.rs  main.rs  models.rs  schema.rs
src/endpoints/: auth.rs  get_vault.rs  mod.rs  register.rs  update_key.rs  update_vault.rs
