[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
simplelog = "0.12.0"
log = "0.4.17"
diesel = { version = "1.4.8", features = ["sqlite"] }
hex = "0.4.3"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]
